test/fail/stdop-t.rnp
'hello'.floor();
---
 --> fail/stdop-t.rnp:1:1
  |
1 | 'hello'.floor();
  | ^^^^^^^ Expected number but got string
  |
